--- a/web/styles/input.css
+++ b/web/styles/input.css
@@ -4,7 +4,14 @@
 
 html,
 body {
-    height: 100%;
+    max-width: 100vw;
+    overflow: hidden auto;
+    min-height: 100%;
     font-family: "Poppins", sans-serif;
 }
 
+.page {
+    min-height: calc(100vh - 60px);
+    max-width: 100%;
+    overflow: hidden auto;
+}
