--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -139,7 +139,7 @@
         </header>
 
         <!-- Mobile Navigation Menu -->
-        <div class="fixed h-screen inset-0 text-primary-800 overflow-hidden z-50 w-0 md:hidden" data-mobile-menu="" x-data="">
+        <div class="fixed h-svh inset-0 text-primary-800 overflow-hidden z-50 w-0 md:hidden" data-mobile-menu="" x-data="">
             <div class="relative flex flex-col bg-stone-50 ml-auto h-full p-4 z-10 w-full">
                 <div class="flex flex-initial items-center pb-4 relative z-10">
                     <h3 class="text-xl font-bold">Menu</h3>
