--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -158,7 +158,7 @@
                     <li class="px-2 py-1 underline underline-offset-2"><a href="/sign-out">Cerrar Sesion</a></li>
                     {{else}}
                     <li class="px-2 py-1 underline underline-offset-2"><a href="/iniciar-sesion">Iniciar Sesion</a></li>
-                    <li class="px-2 py-1 bg-primary-900 text-stone-50 rounded"><a href="/registro">Registrarse</a></li>
+                    <li class="px-2 py-1 bg-primary-900 text-stone-50 rounded"><a href="/registrarse">Registrarse</a></li>
                     {{end}}
                 </ul>
             </div>
@@ -177,7 +177,6 @@
         {{block "modal-wrapper" .}}
         <div id="modal-wrapper" class="left-0 top-0 z-50 invisible opacity-0">
             <div
-                id="modal-loading-card" 
                 class="fixed inset-0 h-screen w-screen bg-stone-900 bg-opacity-40 flex z-50 opacity-0" 
                 x-data="" 
                 x-ref="loadingModal" 
@@ -195,6 +194,7 @@
                 document.body.addEventListener("custom:start-loading", e => {
                     let tl = gsap.timeline({ duration: 0.3, ease: "power2.inOut" })
                     tl.set("#modal-wrapper", { visibility: "visible" })
+                    tl.set("[data-loading-modal]", { visibility: "visible" })
                     tl.to("#modal-wrapper", { opacity: 1 })
                     tl.to("[data-loading-modal]", { opacity: 1 }, "<")
                     tl.to("[data-loading-modal-card]", { scale: 1 }, "<")
@@ -216,6 +216,7 @@
                         }
                     }
 
+                    console.log(e)
                     let nextTween = e.detail.nextTween
                     if (nextTween) {
                         nextTween.resume()
