--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -19,7 +19,7 @@
         <p class="opacity-90">Busca el ultimo acuerdo para cada expediente que agregues</p>
     </div>
 
-    <div class="grid grid-cols-[100%_100%] grid-rows-1 mt-10">
+    <div class="grid grid-cols-[100%_100%] grid-rows-1 mt-10 md:max-w-screen-xl mx-auto">
         {{template "form"}}
         {{template "results"}}
     </div>
@@ -77,7 +77,7 @@
             <input type="text" name="id" id="id" class="flex-auto rounded bg-stone-300 text-primary-900 w-32 py-[7px] px-4 focus:outline-accent-800 placeholder:text-primary-800 placeholder:font-medium placeholder:text-opacity-60" placeholder="469/2022" x-ref="idInp" x-model="id">
             <button
                 type="button"
-                class="flex-initial text-stone-50 w-24 bg-primary-800 font-medium rounded px-2 py-[7px] focus:outline-accent-800"
+                class="flex-initial text-stone-50 w-24 bg-primary-800 font-medium rounded px-2 py-[7px] focus:outline-accent-800 md:flex-auto"
                 @click="if (cases.length === 5) {
                 alert('Solo se pueden buscar 5 expedientes a la vez')
                 return
