--- a/web/templates/sign-in.html
+++ b/web/templates/sign-in.html
@@ -5,11 +5,12 @@
 
 {{define "content"}}
 <div class="page bg-stone-50 md:px-8 mx-auto p-4 overflow-x-hidden overflow-y-auto">
-    <h1 class="text-xl font-semibold text-primary-800 pt-12 mb-6">Iniciar Sesión</h1>
+    <h1 class="text-xl font-semibold text-primary-800 pt-12 mb-6 mx-auto">Iniciar Sesión</h1>
     <form
-        class="max-w-sm space-y-2"
+        class="max-w-sm space-y-2 md:space-y-4 mx-auto"
         hx-post="/sign-in"
         x-data="{ showPassword: false }">
+        <p class="hidden md:block text-lg font-medium text-primary-800 pb-4">Inicia Sesión</p>
         <div class="space-y-1">
             <label for="username" class="text-primary-800 text-xs font-semibold uppercase">Usuario</label>
             <input type="text" name="username" id="username" class="w-full rounded bg-stone-300 text-primary-900 p-2 focus:outline-primary-800">
