--- a/web/styles/input.css
+++ b/web/styles/input.css
@@ -11,7 +11,7 @@ body {
 }
 
 .page {
-    height: calc(100vh - 60px);
+    min-height: calc(100vh - 60px);
     max-width: 100%;
     overflow: hidden auto;
 }
